--- a/CAN_ddp withoutcounting/config.yaml
+++ b/CAN_ddp withoutcounting/config.yaml
@@ -38,6 +38,9 @@ eval_label_path: '/home/ipad_ocr/yhx/CAN/datasets/CROHME/14_test_labels.txt'
 
 word_path: '/home/ipad_ocr/yhx/CAN/datasets/CROHME/words_dict.txt'
 
+len_CROHME: 986
+len_HME100K: 24,607
+
 # collate_fn
 collate_fn: collate_fn
 
@@ -60,7 +63,7 @@ decoder:
 
 counting_decoder:
   in_channel: 684
-  out_channel: 247
+  out_channel: 111
 
 attention:
   attention_dim: 512
